--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,7 @@ jinja2
 azure-identity
 azure-keyvault-secrets
 azure-storage-blob
+azure-mgmt-resource
+azure-mgmt-subscription
 psycopg2-binary
 python-dotenv
